--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   simple_gradient_text: ^1.2.2
+  pin_code_fields: ^7.3.0
   flutter_svg:
 
 
