--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -36,7 +36,7 @@ dependencies:
   flutter_facebook_auth: ^3.5.0
   firebase_auth: ^3.0.1
   introduction_screen: ^2.1.0
-  shared_preferences: ^2.0.6
+  shared_preferences:
   flutter_bloc: ^7.1.0
   equatable: ^2.0.3
   dio: ^4.0.0
