--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   dio: ^4.0.0
   dio_logger: ^4.0.8+8
   intro_slider: ^3.0.2
+  country_picker: ^2.0.7
 dev_dependencies:
   flutter_test:
     sdk: flutter
