--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   intro_slider: ^3.0.2
   country_picker: ^2.0.7
   intl: ^0.17.0
+  image_picker: ^0.8.3+3
 dev_dependencies:
   flutter_test:
     sdk: flutter
