--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   country_picker: ^2.0.7
   intl: ^0.17.0
   image_picker: ^0.8.3+3
+  permission_handler: ^8.1.4+2
 dev_dependencies:
   flutter_test:
     sdk: flutter
