--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   intl: ^0.17.0
   image_picker: ^0.8.3+3
   permission_handler: ^8.1.4+2
+  flutter_tindercard: ^0.2.0
+  swipe_cards: ^0.1.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
