--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_bloc: ^7.1.0
   equatable: ^2.0.3
   dio: ^4.0.0
+  http: ^0.13.3
   dio_logger: ^4.0.8+8
   intro_slider: ^3.0.2
   country_picker: ^2.0.7
