--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,8 @@ dependencies:
   permission_handler: ^8.1.4+2
   flutter_tindercard: ^0.2.0
   swipe_cards: ^0.1.0
+  firebase_core: ^1.10.6
+  cloud_firestore: ^3.1.5
 dev_dependencies:
   flutter_test:
     sdk: flutter
