--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   swipe_cards: ^0.1.0
   firebase_core: ^1.10.6
   cloud_firestore: ^3.1.5
+  firebase_messaging: ^11.2.4
   
 dev_dependencies:
   flutter_test:
