--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -27,6 +27,20 @@ apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 apply plugin: 'com.google.gms.google-services'
 
 android {
+    signingConfigs {
+        debug {
+            storeFile file('F:\\Keys\\irongates\\makemymarry.jks')
+            storePassword 'makemymarry'
+            keyAlias 'makemymarry'
+            keyPassword 'makemymarry'
+        }
+        release {
+            storeFile file('F:\\Keys\\irongates\\makemymarry.jks')
+            storePassword 'makemymarry'
+            keyAlias 'makemymarry'
+            keyPassword 'makemymarry'
+        }
+    }
     compileSdkVersion 30
 
     sourceSets {
