--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   cloud_firestore: ^3.1.5
   firebase_messaging: ^11.2.4
   razorpay_flutter: ^1.3.0
+  agora_rtc_engine: ^5.1.0
   
 dev_dependencies:
   flutter_test:
