--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,13 +47,13 @@ dependencies:
   country_picker: ^2.0.7
   intl: ^0.17.0
   image_picker: ^0.8.3+3
-  permission_handler: ^8.1.4+2
+  permission_handler: ^10.0.0
   swipe_cards: ^0.1.0
   firebase_core: ^1.10.6
   cloud_firestore: ^3.1.5
   firebase_messaging: ^11.2.4
   razorpay_flutter: ^1.3.0
-  agora_rtc_engine: ^5.1.0
+  agora_rtc_engine: ^5.2.0
   
 dev_dependencies:
   flutter_test:
