--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   firebase_messaging: ^11.2.4
   razorpay_flutter: ^1.3.0
   agora_rtc_engine: ^5.2.0
+  localstorage: ^4.0.0+1
   
 dev_dependencies:
   flutter_test:
