--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   razorpay_flutter: ^1.3.0
   agora_rtc_engine: ^5.2.0
   localstorage: ^4.0.0+1
+  flutter_secure_storage: ^6.0.0
   
 dev_dependencies:
   flutter_test:
