--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,12 +18,11 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
-
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -56,18 +55,19 @@ dependencies:
   agora_rtc_engine: ^5.2.0
   localstorage: ^4.0.0+1
   flutter_secure_storage: ^6.0.0
-  
+  # added by saurabh
+  font_awesome_flutter: ^10.2.1
+  carousel_slider: ^4.1.1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -81,6 +81,7 @@ flutter:
     - images/match_meter/
     - images/social/
     - images/wallet/
+    - images/icons/
   fonts:
     - family: MakeMyMarry
       fonts:
