--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   # added by saurabh
   font_awesome_flutter: ^10.2.1
   carousel_slider: ^4.1.1
+  flutter_switch: ^0.3.2
 
 dev_dependencies:
   flutter_test:
