--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,8 @@ dependencies:
   font_awesome_flutter: ^10.2.1
   carousel_slider: ^4.1.1
   flutter_switch: ^0.3.2
+  hexcolor : ^2.0.4
+  bubble: ^1.2.1
 
 dev_dependencies:
   flutter_test:
