--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -48,7 +48,11 @@ android {
         release {
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
-            signingConfig signingConfigs.debug
+        signingConfig signingConfigs.debug
+        shrinkResources false
+        minifyEnabled false
+        useProguard false
+    
         }
     }
 }
