--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,8 @@ dependencies:
   flutter_switch: ^0.3.2
   hexcolor : ^2.0.4
   bubble: ^1.2.1
+  socket_io_client: ^2.0.0
+  rxdart: ^0.27.5
 
 dev_dependencies:
   flutter_test:
