--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,9 @@ dependencies:
   bubble: ^1.2.1
   socket_io_client: ^2.0.0
   rxdart: ^0.27.5
+  flutter_clean_calendar: ^1.0.2+1
+  table_calendar: ^3.0.7
+  scrollable_clean_calendar: 1.4.0
 
 dev_dependencies:
   flutter_test:
