--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,7 @@ dependencies:
   table_calendar: ^3.0.7
   scrollable_clean_calendar: 1.4.0
   share_plus: 5.0.0
+  tuna_flutter_range_slider: ^1.0.0
   
 
 dev_dependencies:
