Google Sign in half done data is fetched through email

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,7 @@ dependencies:
   share_plus: 5.0.0
   tuna_flutter_range_slider: ^1.0.0
   google_sign_in: ^5.4.2
+  flutter_appauth: ^4.2.1
   
 
 dev_dependencies:
