Profile edit issue still to fix

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,9 @@
 {
-    "dart.flutterSdkPath": "E:\\development\\projects\\Makemymarry_main\\.fvm\\flutter_sdk"
+    "dart.flutterSdkPath": "E:\\development\\projects\\Makemymarry_main\\.fvm\\flutter_sdk",
+    "dart.debugExternalLibraries": true,
+    "dart.debugSdkLibraries": true,
+
+
+    
+   
 }
