--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -82,6 +82,8 @@ dependencies:
   file_picker: ^5.0.1
   get_it: ^7.2.0
   flutter_speed_dial: ^6.2.0
+  cached_network_image: ^3.2.3
+  string_validator: ^1.0.0
 
   
 
