--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "dart.flutterSdkPath": "E:\\development\\projects\\Makemymarry_main\\.fvm\\flutter_sdk",
     "dart.debugExternalLibraries": true,
     "dart.debugSdkLibraries": true,
+    "java.configuration.updateBuildConfiguration": "interactive",
 
 
     
